added pause/start button to scoreboard

--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-
+.timer {
+  width: 25rem;
+}
 button {
   display: inline-block;
   border: none;
